2019-1/221/users/4109/executions/1767_2101.log
== TEST (2019-06-01 21:24:01) 
-- CODE:
x = int(input('Digite um numero: '))

y = ones(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    y = ones(x)
NameError: name 'ones' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-01 21:24:26) 
-- CODE:
x = int(input('Digite um numero: '))

y = ones(x, dtype==int)
print(y)
-- EXECUTION TIME:
0.545176
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1767/2101/main.py", line 3, in <module>
    y = ones(x, dtype==int)
NameError: name 'ones' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 21:24:27) 
-- CODE:
x = int(input('Digite um numero: '))

y = ones(x, dtype==int)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    y = ones(x, dtype==int)
NameError: name 'ones' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 21:34:23) 
-- CODE:
x = arrange(5)


print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = arrange(5)
NameError: name 'arrange' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-01 21:34:24) 
-- CODE:
x = arrange(5)


print(x)
-- EXECUTION TIME:
0.665932
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1767/2101/main.py", line 1, in <module>
    x = arrange(5)
NameError: name 'arrange' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 21:34:52) 
-- CODE:
x = arange(5)


print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = arange(5)
NameError: name 'arange' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 21:35:18) 
-- CODE:
from numpy import*
x = arange(5)


print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-01 21:41:06) 
-- CODE:
from numpy import*
x = arange(5)
a, b= 1, 1
k = 1

while(k <= n-2):
	a, b = b, a + b
	k += 1

print(k)
-- EXECUTION TIME:
1.10724
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1767/2101/main.py", line 6, in <module>
    while(k <= n-2):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 21:41:08) 
-- CODE:
from numpy import*
x = arange(5)
a, b= 1, 1
k = 1

while(k <= n-2):
	a, b = b, a + b
	k += 1

print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-01 21:41:24) 
-- CODE:
from numpy import*
x = arange(5)
a, b= 1, 1
k = 1

while(k <= x-2):
	a, b = b, a + b
	k += 1

print(k)
-- EXECUTION TIME:
1.20873
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1767/2101/main.py", line 6, in <module>
    while(k <= x-2):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 21:41:25) 
-- CODE:
from numpy import*
x = arange(5)
a, b= 1, 1
k = 1

while(k <= x-2):
	a, b = b, a + b
	k += 1

print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 21:42:00) 
-- CODE:
from numpy import*
x = int(input('Digite um numero: '))
a, b= 1, 1
k = 1

while(k <= x-2):
	a, b = b, a + b
	k += 1

print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-01 21:43:35) 
-- CODE:
from numpy import*
x = int(input('Digite um numero: '))
a, b= 1, 1
k = 1

while(k <= x-2):
	a, b = b, a + b
	k += 1

print('Fib(%d) = %d' %(n, b))
-- EXECUTION TIME:
0.956525
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1767/2101/main.py", line 10, in <module>
    print('Fib(%d) = %d' %(n, b))
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 21:43:36) 
-- CODE:
from numpy import*
x = int(input('Digite um numero: '))
a, b= 1, 1
k = 1

while(k <= x-2):
	a, b = b, a + b
	k += 1

print('Fib(%d) = %d' %(n, b))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 21:46:57) 
-- CODE:
from numpy import*
x = int(input('Digite um numero: '))
i = 0

if(x == 1):
	print(array('1'))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-02 18:15:34) 
-- CODE:
from numpy import*
x = int(input('Digite um numero: '))
i = 0
f = 1

while(x[i] >= f):
	if(x == 1):
		f += 1
		print(f)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-02 18:16:07) 
-- CODE:
from numpy import*
x = array(eval(input('Digite um numero: ')))
i = 0
f = 1

while(x[i] >= f):
	if(x == 1):
		f += 1
		print(f)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-02 18:20:49) 
-- CODE:
from numpy import*
n= array(eval(input('Digite um numero: ')))
x = 0
y = 0
z = 0

for i in range (n + 1):
	print(x)
	z = x
	x += y
	y = z
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-02 18:21:27) 
-- CODE:
from numpy import*
n= array(eval(input('Digite um numero: ')))
x = 0
y = 0
z = 0

for i in range (n + 1):
	print(x)
	z = x
	x += y
	y = z
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-02 18:22:20) 
-- CODE:
from numpy import*
n= input('Digite um numero: ')
x = 0
y = 0
z = 0

for i in range (n + 1):
	print(x)
	z = x
	x += y
	y = z
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-02 18:22:40) 
-- CODE:
from numpy import*
n= int(input('Digite um numero: '))
x = 0
y = 0
z = 0

for i in range (n + 1):
	print(x)
	z = x
	x += y
	y = z
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-02 18:24:21) 
-- CODE:
from numpy import*
n= int(input('Digite um numero: '))
x = 0
y = 1
z = 1

for i in range (n + 1):
	print(x)
	z = x
	x += y
	y = z
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-02 18:24:22) 
-- CODE:
from numpy import*
n= int(input('Digite um numero: '))
x = 0
y = 1
z = 1

for i in range (n + 1):
	print(x)
	z = x
	x += y
	y = z
-- EXECUTION TIME:
1.14571
-- TEST CASE 1:
---- input:
10
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34]
---- user output:
0
1
1
2
3
5
8
13
21
34
55
-- TEST CASE 2:
---- input:
8
---- correct output:
[ 0 1 1 2 3 5 8 13]
---- user output:
Digite um numero: 0
1
1
2
3
5
8
13
21
-- TEST CASE 3:
---- input:
18
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597]
---- user output:
Digite um numero: 0
1
1
2
3
5
8
13
21
34
55
89
144
233
377
610
987
1597
2584
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-02 18:25:02) 
-- CODE:
from numpy import*
n= int(input('Digite um numero: '))
x = 0
y = 1
z = 1

for i in range (n + 1):
	print(x)
	z = x
	x += y
	y = z
-- EXECUTION TIME:
1.17513
-- TEST CASE 1:
---- input:
10
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34]
---- user output:
0
1
1
2
3
5
8
13
21
34
55
-- TEST CASE 2:
---- input:
8
---- correct output:
[ 0 1 1 2 3 5 8 13]
---- user output:
0
1
1
2
3
5
8
13
21
-- TEST CASE 3:
---- input:
18
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597]
---- user output:
0
1
1
2
3
5
8
13
21
34
55
89
144
233
377
610
987
1597
2584
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
